# crunch-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: benchmark.rs
examples/pack_images/: Cargo.toml
examples/pack_images/src/: main.rs
src/: item.rs  lib.rs  packed_items.rs  packer.rs  rect.rs
