[package]
name = "crunch"
version = "0.1.0"
authors = ["Chevy Ray Johnston <happytrash@gmail.com>"]
edition = "2018"
description = "A packer for cramming lots of rectangles into a larger one, designed primarily with sprite packing in mind."
readme = "README.md"
repository = "https://github.com/ChevyRay/crunch-rs"
license-file = "LICENSE"
keywords = ["rectangle", "rect", "bin", "packer", "sprite", "atlas"]
categories = ["algorithms", "game-development", "graphics"]

[dependencies]